--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^22.14.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "lucide-react": "^0.506.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
